# cosmos-sweep

./: .gitignore  Cargo.toml  LICENSE  README.md  wallets.csv
src/: main.rs
