[package]
name = "cosmos_sweep"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmrs = { version = "0.14", features = ["cosmwasm", "dev"] }
tokio = { version = "1.35", features = ["full"] }
csv = "1.3"
bip39 = "2.0"
hdpath = "0.6"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"
cosmos-client = "0.1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
